added See it in the action and Webflow conf 2022 picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3>Logo</h3>
         <button class="btn-primary">Sign up</button>
       </nav>
-
+      
       <div class="banner-content">
         <h3>
           Cool Dark UI Template for <br />
@@ -29,6 +29,17 @@
         <button class="btn-primary">Stay Focused</button>
       </div>
     </header>
+
+    <main>
+      <section class="baba-1">
+        <div class="body-1">
+          <h2 class="h2-all">See It in Action</h2>
+          <p class="p-all">Explore the live preview and imagine your brand in this bold new look.</p>
+          <button class="btn-primary">Launch Live Preview</button>
+        </div>
+        <img class="web-22" src="Assets/wc-mini.png" alt="">
+      </section>
+    </main>
   </body>
 </html>
 
