--- a/index.html
+++ b/index.html
@@ -34,11 +34,33 @@
       <section class="baba-1">
         <div class="body-1">
           <h2 class="h2-all">See It in Action</h2>
-          <p class="p-all">Explore the live preview and imagine your brand in this bold new look.</p>
+          <p class="p-all">Explore the live preview and imagine your brand <br>in this bold new look.</p>
           <button class="btn-primary">Launch Live Preview</button>
         </div>
         <img class="web-22" src="Assets/wc-mini.png" alt="">
       </section>
+
+      <div class="baba-2">
+        <div class="baba-2-in">
+          <h2 class="h2-all">Joined Thousands of Productive Users</h2>
+        
+         <div class="baba-2-users">
+          <div>
+            <h1> 50k</h1>
+            <p>Active Users</p>
+          </div>
+          <div>
+            <h1> 2M+</h1>
+            <p>Focus Sessions</p>
+          </div>
+          <div>
+            <h1> 95%</h1>
+            <p>Satisfaction Rate</p>
+          </div>
+          
+         </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
