insert baba-4 , which is webflow picc and focus better

--- a/index.html
+++ b/index.html
@@ -140,7 +140,18 @@
           </div>
         </div>
       </div>
-      
+      <div class="baba-4">
+        <div class="babar-chele">
+          <div class="text-4">
+            <h1 class="h1-4">Ready to focus better</h1>
+            <p class="p-4">
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <button class="btn-primary">Ger Started Free</button>
+          </div>
+          <img class="pic-baba-4" src="Assets/wc-big.png" alt="">
+        </div>
+      </div>
     </main>
   </body>
 </html>
