--- a/index.html
+++ b/index.html
@@ -149,7 +149,25 @@
             </p>
             <button class="btn-primary">Ger Started Free</button>
           </div>
-          <img class="pic-baba-4" src="Assets/wc-big.png" alt="">
+          <img class="pic-baba-4" src="Assets/wc-big.png" alt="" />
+        </div>
+      </div>
+      <div class="baba-5">
+        <div class="babar-chele-5">
+          <h1 class="h1-5">Let’s Get in <br> Touch</h1>
+          <div class="form-5">
+            <label for="email">Email</label><br>
+            <input type="email" class="email" placeholder="example@gmail.com" /><br>
+            <label for="name">Name</label><br>
+            <input type="text" class="name" placeholder="full name" /><br>
+            <label for="">Message</label><br>
+            <textarea
+              name="Message"
+              id=""
+              placeholder="write your message..."
+            ></textarea><br>
+            <button class="btn-primary">Get in Touch</button><br>
+          </div>
         </div>
       </div>
     </main>
