insert footer which class baba-6 and implement hover whent touch button then color will change.

--- a/index.html
+++ b/index.html
@@ -174,10 +174,27 @@
               placeholder="write your message..."
             ></textarea
             ><br />
-            <button class="btn-primary">Get in Touch</button><br />
+            <button class="btn-primary-5">Get in Touch</button><br />
           </div>
         </div>
       </div>
     </main>
+
+    <footer class="baba-6">
+      <div class="chele-6">
+        <h1 class="abc">LOGO</h1>
+        <p class="abcd">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+        <div>
+          <div class="ul-6">
+          <p class="li-6">Home</p>
+          <p class="li-6">About</p>
+          <p class="li-6">How it Works</p>
+          <p class="li-6">Services</p>
+        </ul>
+        </div>
+
+      </div>
+
+    </footer>
   </body>
 </html>
